# weekly-task-tracker

./: Cargo.toml  README.md
migrations/: 20251119101404_init.up.sql  20251120141054_add_log.down.sql  20251120141054_add_log.up.sql  20251120143009_record_commitment_create_time.up.sql  20251120143722_record_start_monday.up.sql  20251121152245_enforce_unique_name.up.sql
src/: app.rs  cli.rs  db.rs  main.rs  model.rs  tui.rs  ui.rs  util.rs
