[package]
name = "rust-log-book"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.52", features = ["derive"] }
serde = "1.0.228"
sqlx = { version = "0.7", features = [
  "sqlite",
  "runtime-tokio-native-tls",
  "macros",
] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
terminal_size = "0.4"
